# screenruster-saver-fractal

./: Cargo.toml
assets/: config.toml
assets/shaders/: julia.glsl  mandelbrot.glsl
src/: config.rs  main.rs  saver.rs
